cmake_minimum_required(VERSION 3.12)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(temperature C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CSS_STANDART 17)
pico_sdk_init()
add_executable(temperature start.c)
pico_add_extra_outputs(temperature)
target_link_libraries(temperature pico_stdlib hardware_adc)
pico_enable_stdio_usb(temperature 1)
pico_enable_stdio_uart(temperature 0)
