cmake_minimum_required(VERSION 3.12)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(Sensor C CXX ASM)
set(CMAKE_C_STANDART 11)
set(CMAKE_CXX_STANDART 17)
pico_sdk_init()
add_executable(Sensor main.cpp)
pico_add_extra_outputs(Sensor)
target_link_libraries(Sensor pico_stdlib hardware_gpio hardware_adc)
pico_enable_stdio_usb(Sensor 1)
pico_enable_stdio_uart(Sensor 0)
