cmake_minimum_required(VERSION 3.13)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(joystick C CXX ASM)
set(CMAKE_C_STANDART 11)
set(CMAKE_CXX_STANDART 17)
pico_sdk_init()
add_executable(joystick main.cpp)
pico_add_extra_outputs(joystick)
target_link_libraries(joystick hardware_i2c hardware_gpio hardware_adc pico_stdlib)
pico_enable_stdio_usb(joystick 1)
pico_enable_stdio_uart(joystick 0)
